# django-data-intensive-systems

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
apps/: __init__.py
apps/core/: admin.py  apps.py  exceptions.py  managers.py  middleware.py  mixins.py  models.py  tenant_context.py  utils.py
apps/monitoring/: __init__.py  admin.py  apps.py  health_checks.py  logging.py  metrics.py  middleware.py  models.py  urls.py  views.py
apps/monitoring/migrations/: 0001_initial.py  0002_monitoringconfig_tenant_id.py
apps/orders/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_order_tenant_id.py  0003_alter_payment_options_and_more.py  __init__.py
apps/sensors/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/sensors/migrations/: 0001_initial.py  0002_device_tenant_id_sensoraggregate_tenant_id_and_more.py  __init__.py
config/: asgi.py  celery_app.py  urls.py
config/settings/: __init__.py  base.py  development.py  production.py
docs/: ARCHITECTURE.md  DATABASE.md  PATTERNS.md
requirements/: base.in  base.txt  dev.in  dev.txt  prod.in  prod.txt  test.in  test.txt
scripts/: data_generator.py  load_test.py  migration_audit.py
tests/: conftest.py  factories.py  test_core_models.py
